# instaloader-gui

./: CONTRIBUTING.md  InstaReel_Downloader.py  README.md  pyproject.toml  requirements.txt  settings.json
.github/: RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pylint.yml  python-ci.yml
docs/: README.md
src/: InstaReel_Downloader.py  build.bat  main.py  settings.json  updater.py
src/agents/: instaloader.py  yt_dlp.py
src/core/: data_models.py  downloader.py  transcriber.py
src/resources/: splash.py
src/transcriptionDisabled/: main.py
src/transcriptionDisabled/src/: build.bat  main.py
src/transcriptionDisabled/src/agents/: instaloader.py  yt_dlp.py
src/transcriptionDisabled/src/core/: data_models.py  downloader.py
src/transcriptionDisabled/src/resources/: splash.py
src/transcriptionDisabled/src/ui/: components.py  main_window.py
src/transcriptionDisabled/src/utils/: lazy_imports.py
src/transcriptionEnabled/: build.bat  main.py  settings.json
src/transcriptionEnabled/src/: build.bat  main.py  updater.py
src/transcriptionEnabled/src/agents/: instaloader.py
src/transcriptionEnabled/src/core/: data_models.py  downloader.py
src/transcriptionEnabled/src/resources/: splash.py
src/transcriptionEnabled/src/ui/: components.py  main_window.py
src/transcriptionEnabled/src/utils/: lazy_imports.py
src/ui/: main_window.py
src/utils/: bin_checker.py  lazy_imports.py  resource_loader.py  url_validator.py
tests/: test_downloader.py
